Handle new slide_type columns for slides.
