# openapi.yaml
@@ -554,6 +554,12 @@ paths:
                     type: string
                     description: slide texts to upload
                     example: ["you must know that all that is said in The Book of Zohar", "However, there are three boundaries "]
+                slides_types:
+                  type: array
+                  items:
+                    type: string
+                    description: slide type for each slide, e.g., subtitle or question
+                    example: ["question", "subtitle"]
                 languages:
                   type: array
                   items:
@@ -894,6 +900,10 @@ components:
           type: string
           description: updated time
           example: "2023-09-04T09:26:23.086238Z"
+        slide_type:
+          type: string
+          description: slide type, e.g., subtitle or question
+          example: "question"
     SlideDetail:
       title: Slide Data with extra data
       description: An slide with meta data
